--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <!-- Main Title -->
-    <section>
-        <h1>Smart Budget Calculator</h1>
+    <!-- Heading Section -->
+    <section class="container-fluid">
+        <div class="d-flex mx-auto justify-content-center">
+        <h1 class="text-dark">Smart Budget Calculator</h1>
+        <img src="images/logo.png" class="ms-2" alt="" height="" width="75px">
+        </div>
     </section>
 </body>
 </html>
