--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Budget Calculator</title>
     <!-- BootStrap Style Link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
     <!-- Heading Section -->
-    <section class="container-fluid">
+    <section class="container-fluid my-5">
         <div class="d-flex mx-auto justify-content-center">
-        <h1 class="text-dark">Smart Budget Calculator</h1>
-        <img src="images/logo.png" class="ms-2" alt="" height="" width="75px">
+            <h1 class="text-dark">Smart Budget Calculator</h1>
+            <img src="images/logo.png" class="ms-2" alt="" height="" width="75px">
+        </div>
+    </section>
+    <!-- Inner Section -->
+    <section class="container row mx-auto">
+        <div class="col-6">
+            <img src="images/banner.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-6 p-5 text-center bg-light">
+            <h4 class="mb-3">Income</h4>
+            <label for="">Income:</label>
+            <input type="text" class="mb-4">
+            <h4 class="mb-3">Expenses</h4>
+            <label for="">Income:</label>
+            <input type="text" class="mb-2"> <br>
+            <label for="">Income:</label>
+            <input type="text" class="mb-2"> <br>
+            <label for="">Income:</label>
+            <input type="text" class="mb-2"> <br>
+            <button class="mb-4">Calculate</button>
+            <h3>Total Expenses: $<span>00</span></h3>
+            <h3 class="mb-5">Balance: $<span>00</span></h3>
+            <label for="">Save: </label>
+            <input type="text" class="mb-4"> %
+            <button class="mb-3">Save</button>
+            <h3>Saving Amount: $<span>00</span></h3>
+            <h3>Remaining Balance: $<span>00</span></h3>
         </div>
     </section>
 </body>
+
 </html>
