--- a/index.html
+++ b/index.html
@@ -29,22 +29,27 @@
             <label for="">Income:</label>
             <input type="text" class="mb-4">
             <h4 class="mb-3">Expenses</h4>
-            <label for="">Income:</label>
+            <label for="">Food:</label>
             <input type="text" class="mb-2"> <br>
-            <label for="">Income:</label>
+            <label for="">Rent:</label>
             <input type="text" class="mb-2"> <br>
-            <label for="">Income:</label>
+            <label for="">Clothes:</label>
             <input type="text" class="mb-2"> <br>
-            <button class="mb-4">Calculate</button>
+            <button class="mb-4 btn btn-primary">Calculate</button>
             <h3>Total Expenses: $<span>00</span></h3>
             <h3 class="mb-5">Balance: $<span>00</span></h3>
             <label for="">Save: </label>
             <input type="text" class="mb-4"> %
-            <button class="mb-3">Save</button>
+            <button class="mb-3 btn btn-primary">Save</button>
             <h3>Saving Amount: $<span>00</span></h3>
             <h3>Remaining Balance: $<span>00</span></h3>
         </div>
     </section>
+    <!-- Footer section -->
+    <footer class="text-center mt-3 bg-secondary p-4">
+<small>Created by <span><i>Al Kafiul Islam</i></span>&copy;</small>
+    </footer>
+    <script src="Javascript/app.js"></script>
 </body>
 
 </html>
