--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
     </section>
     <!-- Inner Section -->
     <section class="container row mx-auto">
-        <div class="col-6">
+        <div class="col-lg-6">
             <img src="images/banner.jpg" class="img-fluid" alt="">
         </div>
-        <div class="col-6 p-5 text-center bg-light">
+        <div class="col-lg-6 p-5 text-center bg-light">
             <h4 class="mb-3">Income</h4>
             <label for="">Income:</label>
-            <input type="text" class="mb-4">
+            <input id="income-field" type="text" class="mb-4">
             <h4 class="mb-3">Expenses</h4>
             <label for="">Food:</label>
-            <input type="text" class="mb-2"> <br>
+            <input id="food-field" type="text" class="mb-2"> <br>
             <label for="">Rent:</label>
-            <input type="text" class="mb-2"> <br>
+            <input id="rent-field" type="text" class="mb-2"> <br>
             <label for="">Clothes:</label>
-            <input type="text" class="mb-2"> <br>
-            <button class="mb-4 btn btn-primary">Calculate</button>
-            <h3>Total Expenses: $<span>00</span></h3>
-            <h3 class="mb-5">Balance: $<span>00</span></h3>
+            <input id="clothes-field" type="text" class="mb-2"> <br>
+            <button id="calculate-button" class="mb-4 btn btn-primary">Calculate</button>
+            <h3>Total Expenses: $<span id="expenses-amount">00</span></h3>
+            <h3 class="mb-5">Balance: $<span id="balance">00</span></h3>
             <label for="">Save: </label>
-            <input type="text" class="mb-4"> %
-            <button class="mb-3 btn btn-primary">Save</button>
-            <h3>Saving Amount: $<span>00</span></h3>
-            <h3>Remaining Balance: $<span>00</span></h3>
+            <input id="save-field" type="text" class="mb-4"> %
+            <button id="save-button" class="mb-3 btn btn-primary">Save</button>
+            <h3>Saving Amount: $<span id="save-amount">00</span></h3>
+            <h3>Remaining Balance: $<span id="remaining-balance">00</span></h3>
         </div>
     </section>
     <!-- Footer section -->
