--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- BootStrap Style Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- FontAwesome Icon -->
+    <script src="https://kit.fontawesome.com/128080fe3c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -35,6 +37,11 @@
             <input id="rent-field" type="number" class="mb-2"> <br>
             <label for="">Clothes:</label>
             <input id="clothes-field" type="number" class="mb-2"> <br>
+            <h6 id="numberError" class="text-danger my-2" style="visibility: hidden">
+                <i class="fa-solid fa-circle-exclamation"></i>
+                Wrong input! Please recheck again. <br>
+                Note: Your expenses should be less than or equal to your income.
+            </h6>
             <button id="calculate-button" class="mb-4 btn btn-primary">Calculate</button>
             <h3>Total Expenses: $<span id="expenses-amount">00</span></h3>
             <h3 class="mb-5">Balance: $<span id="balance">00</span></h3>
@@ -43,7 +50,11 @@
             <button id="save-button" class="mb-3 btn btn-primary">Save</button>
             <h3>Saving Amount: $<span id="save-amount">00</span></h3>
             <h3>Remaining Balance: $<span id="remaining-balance">00</span></h3>
-            <small id="error" style="display: none;">error</small>
+            <h6 id="savingError" class="text-danger my-2" style="visibility: hidden">
+                <i class="fa-solid fa-circle-exclamation"></i>
+                Wrong input! Please recheck again. <br>
+                Note: Saving amount should be less than or equal to your balance.
+            </h6>
         </div>
     </section>
     <!-- Footer section -->
