--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- BootStrap Style Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- Custom CSS Link -->
-        <link rel="stylesheet" href="CSS/style.css">
+    <!-- Custom CSS Link -->
+    <link rel="stylesheet" href="CSS/style.css">
     <!-- FontAwesome Icon -->
     <script src="https://kit.fontawesome.com/128080fe3c.js" crossorigin="anonymous"></script>
 </head>
@@ -34,35 +34,41 @@
             <input id="income-field" type="number" class="mb-4">
             <h4 class="mb-3">Expenses</h4>
             <label for="" class="fw-bold">Food:</label>
-            <input id="food-field" type="number" class="mb-2"> <br>
+            <input id="food-field" type="number" class="mb-3 ms-3"> <br>
             <label for="" class="fw-bold">Rent:</label>
-            <input id="rent-field" type="number" class="mb-2"> <br>
+            <input id="rent-field" type="number" class="mb-3 ms-3"> <br>
             <label for="" class="fw-bold">Clothes:</label>
             <input id="clothes-field" type="number" class="mb-2"> <br>
-            <h6 id="numberError" class="text-danger my-2" style="visibility: hidden">
+            <small id="numberError" class="text-danger fw-bold mb-1" style="display: none"> <br>
                 <i class="fa-solid fa-circle-exclamation"></i>
                 Wrong input! Please recheck again. <br>
                 Note: Your expenses should be less than or equal to your income.
-            </h6>
-            <button id="calculate-button" class="mb-4 btn bg-color text-light fw-bold">Calculate</button>
-            <h3>Total Expenses: $<span id="expenses-amount">00</span></h3>
-            <h3 class="mb-5">Balance: $<span id="balance">00</span></h3>
+            </small>
+            <button id="calculate-button" class="mt-2 mb-3 btn bg-color text-light fw-bold">Calculate</button>
+            <div class="bg-color rounded mx-5 mb-4 py-3 text-light">
+                <h3>Total Expenses: $<span id="expenses-amount">00</span></h3>
+                <h3 class="">Balance: $<span id="balance">00</span></h3>
+            </div>
             <label for="" class="fw-bold">Save: </label>
             <input id="save-field" type="number" class="mb-4"> %
-            <button id="save-button" class="mb-3 btn bg-color text-light fw-bold">Save</button>
-            <h3>Saving Amount: $<span id="save-amount">00</span></h3>
-            <h3>Remaining Balance: $<span id="remaining-balance">00</span></h3>
-            <h6 id="savingError" class="text-danger my-2" style="visibility: hidden">
+            <button id="save-button" class="mb-2 btn bg-color text-light fw-bold">Save</button> <br>
+            <small id="savingError" class="text-danger mb-2 fw-bold" style="display: none">
                 <i class="fa-solid fa-circle-exclamation"></i>
                 Wrong input! Please recheck again. <br>
                 Note: Saving amount should be less than or equal to your balance.
-            </h6>
+            </small>
+            <div class="bg-color rounded mx-5 mt-1 py-3 text-light">
+                <h3>Saving Amount: $<span id="save-amount">00</span></h3>
+                <h3>Remaining Balance: $<span id="remaining-balance">00</span></h3>
+            </div>
+
         </div>
     </section>
     <!-- Footer section -->
     <footer class="text-center mt-3 bg-secondary p-4">
         <small class="text-light">Created by <span><i>Al Kafiul Islam</i></span>&copy;</small>
     </footer>
+    <!-- Javascript Link -->
     <script src="Javascript/app.js"></script>
 </body>
 
